--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -308,5 +308,6 @@
 	<string name="could_not_import_identity_drive_404">Could not load identity - please make sure you selected the same Google account that you were using in Google Drive.</string>  
 	<string name="pick_same_drive_account">Please pick the same account that you were using in Google Drive:</string>	
 	<string name="about">about...</string>	
-	<string name="unauthorized">unauthorized</string>
+	<string name="unauthorized">unauthorized</string>	
+	<string name="verify_key_fingerprints">verify key fingerprints</string>
 </resources>
