--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -309,5 +309,5 @@
     <string name="public_key_fingerprints">public key fingerprints</string>
     <string name="loading">loading...</string>
     <string name="device_does_not_support_google_drive">Device not configured for Google Drive.</string>
-
+    <string name="login_update">please update surespot to login</string>
 </resources>
