--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -310,4 +310,5 @@
     <string name="loading">loading...</string>
     <string name="device_does_not_support_google_drive">Device not configured for Google Drive.</string>
     <string name="login_update">please update surespot to login</string>
+    <string name="help_agreement"><![CDATA["By clicking OK you agree to the surespot <a href="https://www.surespot.me/documents/surespot_terms_of_service.html">terms of service</a>."]]></string>
 </resources>
