put new strings in strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -312,7 +312,7 @@
     <string name="login_update">please update surespot to login</string>
     <string name="help_agreement"><![CDATA["By clicking OK you agree to the surespot <a href="https://www.surespot.me/documents/surespot_terms_of_service.html">terms of service</a>."]]></string>
     <string name="billing_payment_required_voice">surepot voice message not purchased</string>
-    <string name="billing_getting_inventory">getting purchase inventory, please try again later</string>
+    <string name="billing_getting_inventory">getting purchase inventory, please try again in a second</string>
     <string name="billing_unavailable">billing unavailable</string>
     <string name="billing_error">billing error</string>
 </resources>
