maintain dialog fragment state across rotation set button image on voice purchase fragment close handle billing state in voice purchase fragment UI

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -313,7 +313,8 @@
     <string name="help_agreement"><![CDATA["By clicking OK you agree to the surespot <a href="https://www.surespot.me/documents/surespot_terms_of_service.html">terms of service</a>."]]></string>
     <string name="billing_payment_required_voice">surepot voice message not purchased</string>
     <string name="billing_getting_inventory">getting purchase inventory, please try again in a second</string>
-    <string name="billing_unavailable">billing unavailable</string>
+    <string name="billing_unavailable_message">you must have a gogole account to purchase voice messaging</string>
+    <string name="billing_unavailable_title">billing unavailable</string>
     <string name="billing_error">billing error</string>
     <string name="pref_billing">purchases</string>
     <string name="suppress_voice_purchase">"don't ask me to buy voice messaging (closes tab instead)"</string>
